tests/baselines/reference/derivedClassSuperCallsInNonConstructorMembers.errors.txt
==== tests/cases/compiler/derivedClassSuperCallsInNonConstructorMembers.ts (13 errors) ====
    // error to use super calls outside a constructor
    
    class Base {
        x: string;
    }
    
    class Derived extends Base {
        a: super();
           ~~~~~
!!! error TS1006: Identifier expected; 'super' is a keyword.
           ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        b() {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
        get C() {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return 1;
        }
        set C(v) {
            super();
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        static a: super();
                  ~~~~~
!!! error TS1006: Identifier expected; 'super' is a keyword.
                  ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        static b() {
            super();
            ~~~~~
!!! error TS2089: Calls to 'super' are only valid inside a class.
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
        static get C() {
            super();
            ~~~~~
!!! error TS2089: Calls to 'super' are only valid inside a class.
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return 1;
        }
        static set C(v) {
            super();
            ~~~~~
!!! error TS2089: Calls to 'super' are only valid inside a class.
            ~~~~~
!!! error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    }